refact : 좋아요한 게시물 조회 로직 수정